=======
CHANGES
=======

3.5.5 (unreleased)
------------------

- Nothing changed yet.


3.5.4 (2010-01-08)
------------------

- Test dependency on zptpage removed.


3.5.3 (2010-01-05)
------------------

- Updated to use newer zope.publisher 3.12 and zope.login to make
  tests work.


Version 3.5.2 (2009-12-19)
--------------------------

- Move 'zope.ManageApplication' permission from zope.app.security package

- Break dependency on ``zope.app.appsetup`` by using a conditional import


Version 3.5.1 (2009-08-15)
--------------------------

- Added missing (normal and test) dependencies.

- Renenabled functional tests.

Version 3.5.0 (2009-05-23)
--------------------------

- The application controller is now registered as a utility so that other
  packages like zope.traversing and zope.app.publication do not need
  to depend on this package directly.  This also makes the application
  controller pluggable.

Version 3.4.3 (2008-07-30)
--------------------------

- Make the test for the ZopeVersion bugfix in 3.4.2 not fail when run from an
  egg rather than a checkout.

Version 3.4.2 (2008-07-30)
--------------------------

- Substitute zope.app.zapi by direct calls to its wrapped apis.
  See http://launchpad.net/bugs/219302

- Bugfix: ZopeVersion used to report an unknown version when running on a
  machine with a locale different than English.
  See http://launchpad.net/bugs/177733

- Fixed deprecation warning in ftesting.zcml: import ZopeSecurityPolicy from
  the new location.

Version 3.4.1 (2007-09-27)
--------------------------

- rebumped to replace faulty egg

Version 3.4.0 (2007-09-25)
--------------------------

- Initial documented release

- Reflect changes form zope.app.error refactoring