@@ -1,7 +1,6 @@
 [buildout]
-develop = . 
+develop = .
 parts = test
-find-links = http://download.zope.org/distribution/
 
 [test]
 recipe = zc.recipe.testrunner
