@@ -3,40 +3,11 @@
    i18n_domain="zope"
    >
 
-  <permission
-     id="zope.ManageApplication"
-     title="[manage-application-permission] Manage Application"
-     description="Manage the Zope Application, such as Restart/Shutdown or
-                  packing the ZODB."
-     />
+  <include package="zope.applicationcontrol" />
 
-  <class class=".applicationcontrol.ApplicationControl">
-    <require
-       permission="zope.ManageApplication"
-       interface=".interfaces.IApplicationControl"/>
-  </class>
-  
-  <adapter 
-     for=".interfaces.IApplicationControl"
-     provides=".interfaces.IRuntimeInfo"
-     factory=".runtimeinfo.RuntimeInfo"
-     permission="zope.ManageApplication" />
-  
   <utility 
      component=".zopeversion.ZopeVersionUtility"
      provides=".interfaces.IZopeVersion" />
-
-  <utility
-     component=".applicationcontrol.applicationController"
-     provides="zope.traversing.interfaces.IEtcNamespace"
-     name="process"
-     />
-
-  <utility
-     component=".applicationcontrol.applicationController"
-     provides="zope.traversing.interfaces.IEtcNamespace"
-     name="ApplicationController"
-     />
 
   <!-- Include browser package -->
 
