@@ -17,106 +17,7 @@ $Id$
 """
 __docformat__ = 'restructuredtext'
 
-import sys
-import os
-import time
+# BBB
+from zope.applicationcontrol.runtimeinfo import (
+    RuntimeInfo)
 
-try:
-    import locale
-except ImportError:
-    locale = None
-
-import platform
-
-from zope.component import getUtility, ComponentLookupError
-from zope.interface import implements
-
-from zope.app.applicationcontrol.i18n import ZopeMessageFactory as _
-
-from zope.app.applicationcontrol.interfaces import IRuntimeInfo
-from zope.app.applicationcontrol.interfaces import IApplicationControl
-from zope.app.applicationcontrol.interfaces import IZopeVersion
-
-try:
-    from zope.app.appsetup import appsetup
-except ImportError:
-    appsetup = None
-
-
-class RuntimeInfo(object):
-    """Runtime information."""
-
-    implements(IRuntimeInfo)
-    __used_for__ = IApplicationControl
-
-    def __init__(self, context):
-        self.context = context
-
-    def getDeveloperMode(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        if appsetup is None:
-            return 'undefined'
-
-        cc=appsetup.getConfigContext()
-        if cc == None:  # make the test run
-            return 'undefined'
-        if cc.hasFeature('devmode'):
-            return 'On'
-        return 'Off'
-
-    def getPreferredEncoding(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        if locale is not None:
-            try:
-                return locale.getpreferredencoding()
-            except locale.Error:
-                pass
-        return sys.getdefaultencoding()
-
-    def getFileSystemEncoding(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        enc = sys.getfilesystemencoding()
-        if enc is None:
-            enc = self.getPreferredEncoding()
-        return enc
-
-    def getZopeVersion(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        try:
-            version_utility = getUtility(IZopeVersion)
-        except ComponentLookupError:
-            return _("Unavailable")
-        return version_utility.getZopeVersion()
-
-    def getPythonVersion(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        return unicode(sys.version, self.getPreferredEncoding())
-
-    def getPythonPath(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        enc = self.getFileSystemEncoding()
-        return tuple([unicode(path, enc) for path in sys.path])
-
-    def getSystemPlatform(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        info = []
-        enc = self.getPreferredEncoding()
-        for item in platform.uname():
-            try:
-                t = unicode(item, enc)
-            except ValueError:
-                continue
-            info.append(t)
-        return u" ".join(info)
-
-    def getCommandLine(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        return unicode(" ".join(sys.argv), self.getPreferredEncoding())
-
-    def getProcessId(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        return os.getpid()
-
-    def getUptime(self):
-        """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        return time.time() - self.context.getStartTime()
